package com.niudada.sku.base;

public interface Prototype<T> {
    T copy();
}
